--- a/online-test-frontend/index.html
+++ b/online-test-frontend/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Online Test Platform" />
     <title>Online Test Platform</title>
-    
+
     <!-- Only preload critical CSS -->
-    <link rel="preload" href="/src/App.css" as="style">
-    <link rel="stylesheet" href="/src/App.css">
-    
+    <link rel="preload" href="/src/App.css" as="style" />
+    <link rel="stylesheet" href="/src/App.css" />
+
     <!-- Preload fonts if you have any -->
     <!-- <link rel="preload" href="/fonts/Inter.woff2" as="font" type="font/woff2" crossorigin> -->
   </head>
